--- a/ISHRAE/style.css
+++ b/ISHRAE/style.css
@@ -55,7 +55,7 @@ body {
 
         .logo-container span {
             font-size: 1.5rem;
-            color: white;
+            color: rgb(139, 197, 248);
             font-weight: bold;
             font-family: var(--fb);
         }
